# jlens-lab

./: .gitignore  FINDINGS.md  README.md  pyproject.toml
docs/: 01-what-the-jacobian-lens-computes.md  02-fitting-without-fooling-yourself.md  03-reading-a-lens-honestly.md  04-lensing-things-that-arent-transformers.md  README.md
experiments/: phase0_enrichment.py
jlens_lab/: __init__.py  artifacts.py  attribution.py  capacity.py  controls.py  fitting.py  geometry.py  layouts.py  viewpoint.py  workspace_content.py
jlens_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py  test_viewpoint.py
